--- a/style.css
+++ b/style.css
@@ -7,31 +7,40 @@ body {
     margin: fill;
 
 }
-
+.output {
+    background-color: rgb(201, 201, 201);
+    padding: 15px;
+    width: 250px;
+    height: 20px;
+    text-align: right;
+    font-size: 20px;
+    border-radius: 5px;
+}
 table {
     border: 5px solid black ;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: auto;
-    margin-top: auto;
+    border-radius: 10px;
+    margin: auto;
+    height: 250px;
+    background-color: #f9ff00;
 }
 thead {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: auto;
     margin-top: auto;
+
 }
-td {
-    background: #000000;
-}
+
 button{
     box-sizing: border-box;
     position: relative;
     width: 100%;
+    height: 40px;
     color: #ffffff;
     background-color: #616161;
     text-align: center;
     border: 1px solid #466995;
+    border-radius: 10px;
 }
 button:hover {
     background-color: #00fff4;
