--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 
 }
 .output {
-    background-color: rgb(201, 201, 201);
+    background-color: rgb(51, 118, 39);
     padding: 15px;
     width: 250px;
     height: 20px;
@@ -21,7 +21,7 @@ table {
     border-radius: 10px;
     margin: auto;
     height: 250px;
-    background-color: #f9ff00;
+    background-color: #b3b3b3;
 }
 thead {
     margin-left: auto;
@@ -39,9 +39,9 @@ button{
     color: #ffffff;
     background-color: #616161;
     text-align: center;
-    border: 1px solid #466995;
+    border: 1px solid #7f7f7f;
     border-radius: 10px;
 }
 button:hover {
-    background-color: #00fff4;
+    background-color: #797979;
 }
